# Ingest_nyc_taxi_data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: fetch_trips.py  flow.py  ingest_trips.py
src/config/: .env.docker  .env.local  __init__.py
src/postgres/: __init__.py
